--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "official-demo/impress.js"]
 	path = official-demo/impress.js
 	url = https://github.com/henrikingo/impress.js.git
+[submodule "cube/impress.js"]
+	path = cube/impress.js
+	url = https://github.com/henrikingo/impress.js.git
