--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "empty-slides/impress.js"]
 	path = empty-slides/impress.js
 	url = https://github.com/henrikingo/impress.js.git
+[submodule "empty/impress.js"]
+	path = empty/impress.js
+	url = https://github.com/henrikingo/impress.js.git
